--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.webcrudsecurityboot</groupId>
+	<groupId>com</groupId>
 	<artifactId>webcrudsecurityboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -16,6 +16,8 @@
 	<description>Project Spring Boot WEB CRUD SEC</description>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.webcrudsecurityboot.WebcrudsecuritybootApplication</start-class>
+
 	</properties>
 	<dependencies>
 		<dependency>
