--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/userdb?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
 db.username=root
-db.password=2lKB$smH
+db.password=root
 
 # Hibernate properties
 entitymanager.packages.to.scan=com.webcrudsecurityboot.model
@@ -19,3 +19,4 @@ spring.thymeleaf.suffix=.html
 
 #Enable hidden method
 spring.mvc.hiddenmethod.filter.enabled=true
+
